<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ganesa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ganesh Seats"
        android:textColor="@color/darkMineShaft"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_12sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextColor="@color/darkMineShaft"
        app:boxStrokeColor="@color/darkMineShaft"
        android:layout_marginVertical="@dimen/_6sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkMineShaft"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:maxLength="100"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextColor="@color/darkMineShaft"
        app:boxStrokeColor="@color/darkMineShaft"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/darkMineShaft"
        android:layout_marginVertical="@dimen/_6sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkMineShaft"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="150"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/darkMineShaft"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_6sdp"/>

</LinearLayout>