<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    android:background="@color/darkMineShaft"
    android:orientation="vertical">

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        app:dividerColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_12sdp"/>


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_option"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

        <ImageButton
            android:id="@+id/camera_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:backgroundTint="@color/white"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/rounded_border"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/gallery_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginBottom="14dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/camera_circle"
            app:layout_constraintStart_toStartOf="@+id/camera_circle"
            app:layout_constraintTop_toBottomOf="@+id/camera_circle" />

        <ImageButton
            android:id="@+id/gallery_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_library_24"
            android:backgroundTint="@color/white"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/rounded_border"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/camera_circle"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gallery_circle"
            android:layout_marginVertical="@dimen/_2sdp"
            android:layout_marginBottom="19dp"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gallery_circle"
            app:layout_constraintStart_toStartOf="@+id/gallery_circle"
            app:layout_constraintTop_toBottomOf="@+id/gallery_circle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>